# ERMES

./: Cargo.toml  Dockerfile  README.md  compose.yml
classes/: README.md  actuator.json  alert.json  ambient_light_sensor.json  blood_pressure_sensor.json  caregiver.json  cognitive_exercise.json  dynamic_location.json  dynamically_located.json  fall_detector.json  fall_event.json  lamp.json  location_detector.json  locator.json  patient.json  residence.json  room.json  sensor.json  shared_device.json  static_location.json  statically_located.json  zone_detector.json
gui/: index.html  package-lock.json  package.json
gui/src/: app.ts  main.ts  offcanvas.ts
rules/: blood-pressure-measurement.clp  cognitive-performance.clp  fall-event.clp  os6-demo.clp  patient-locator.clp  welcome-message.clp
scripts/: setup_clips_source.ps1
src/: main.rs
