[package]
name = "focaal"
version = "0.1.0"
authors = ["Riccardo De Benedictis"]
edition = "2024"
description = "Urban Ecosystem for Active and Healthy Aging"
readme = "README.md"
repository = "https://github.com/pstlab/ERMES"
license-file = "LICENSE.txt"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
rust-embed = "8.11"
coco-reasoner = { git = "https://github.com/ratioSolver/COCO", branch = "investigating_rust", features = [
    "server",
] }
serde_json = "1.0.149"
